# flighty-mcp

./: LICENSE  README.md  flighty.py  main.py  pyproject.toml
