[project]
name = "flighty-mcp"
version = "0.1.0"
description = "MCP server for accessing local Flighty app flight data"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
